# zotero-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
bench/: bench.py
src/: client.rs  config.rs  main.rs  merge.rs  output.rs  types.rs
