[package]
name = "zotero-cli"
version = "0.1.0"
edition = "2021"
description = "Terminal interface for Zotero library operations"

[[bin]]
name = "zotero-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
minreq = { version = "2", features = ["json-using-serde", "https-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.16"
colored = "2"
anyhow = "1"
dirs = "5"
toml = "0.8"
urlencoding = "2"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
